# simple_object_detection

./: .gitignore  CMakeLists.txt  m_values.h  main.cpp  utils.h
